# nqrduck-spectrometer-limenqr

./: .gitignore  README.md  pyproject.toml
src/nqrduck_spectrometer_limenqr/: controller.py  limenqr.py  model.py  view.py  widget.py
src/nqrduck_spectrometer_limenqr/contrib/: README.md  pulseN_test_USB  pulseN_test_USB_TX2  pulseN_test_USB_TX2.cpp
src/nqrduck_spectrometer_limenqr/resources/: limenqr.ini  limenqr_widget.ui
