[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck-spectrometer-limenqr"
version = "0.0.3"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "A submodule for the nqrduck-spectrometer module which implements the functionality for the LimeNQR spectrometer."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "nqrduck-spectrometer",
    "pyqt6",
    "h5py",
    "pyserial",
]

[project.entry-points."nqrduck"]
"nqrduck-spectrometer-limenqr" = "nqrduck_spectrometer_limenqr.limenqr:LimeNQR"